--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "concurrently \"yarn run dev:css\" \"next dev\"",
+    "dev:css": "tailwindcss -w -i ./styles/input.css -o styles/globals.css",
+    "build": "npm run build:css && next build",
+    "build:css": "tailwindcss -m -i ./styles/input.css -o styles/globals.css",
     "start": "next start",
     "lint": "next lint"
   },
@@ -20,6 +22,10 @@
   },
   "devDependencies": {
     "@types/react": "18.0.21",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1",
+    "concurrently": "^7.4.0",
     "typescript": "4.8.4"
   }
 }
