--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nouns/assets": "^0.4.0",
     "@nouns/sdk": "^0.2.0",
     "@rainbow-me/rainbowkit": "^0.7.2",
+    "classnames": "^2.3.2",
     "ethers": "^5.7.1",
     "next": "12.3.1",
     "react": "18.2.0",
@@ -23,9 +24,9 @@
   "devDependencies": {
     "@types/react": "18.0.21",
     "autoprefixer": "^10.4.13",
+    "concurrently": "^7.4.0",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
-    "concurrently": "^7.4.0",
     "typescript": "4.8.4"
   }
 }
