--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.56.1",
     "wagmi": "^0.8.5"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.8",
     "@types/react": "18.0.21",
     "autoprefixer": "^10.4.13",
     "concurrently": "^7.4.0",
