--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loading-skeleton": "^3.1.0",
     "sass": "^1.56.1",
     "wagmi": "^0.8.5"
   },
