--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@rainbow-me/rainbowkit": "^0.7.2",
     "classnames": "^2.3.2",
     "ethers": "^5.7.1",
+    "framer-motion": "^7.8.0",
     "lodash.groupby": "^4.6.0",
     "next": "12.3.1",
     "react": "18.2.0",
