--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loading-skeleton": "^3.1.0",
+    "react-responsive": "^9.0.2",
     "sass": "^1.56.1",
     "wagmi": "^0.8.5"
   },
