--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^7.8.0",
     "lodash.groupby": "^4.6.0",
     "next": "12.3.1",
+    "next-seo": "^5.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loading-skeleton": "^3.1.0",
