--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "12.3.1",
     "next-seo": "^5.15.0",
     "react": "18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
     "react-loading-skeleton": "^3.1.0",
     "react-responsive": "^9.0.2",
