--- a/ExampleNoun.tsx.example
+++ b/ExampleNoun.tsx.example
@@ -1,3 +1,4 @@
+// @ts-nocheck
 import { BigNumber, utils } from "ethers";
 import { useCallback, useEffect, useState } from "react";
 import { useContractRead } from "wagmi";
